# rsmf

./: Cargo.toml  README.md  deny.toml  justfile
.github/workflows/: ci.yml
crates/rsmf-bench/: Cargo.toml
crates/rsmf-bench/benches/: cpu_open.rs  moe_dispatch.rs  native_decoder.rs  tensor_access.rs  wgpu_upload.rs
crates/rsmf-bench/src/: lib.rs
crates/rsmf-cli/: Cargo.toml
crates/rsmf-cli/src/: main.rs
crates/rsmf-cli/src/cmd/: error.rs  export.rs  extract.rs  extract_asset.rs  import.rs  inspect.rs  mod.rs  pack.rs  placement.rs  rewrite.rs  select.rs  shard.rs  verify.rs
crates/rsmf-cli/tests/: cli_smoke.rs  conversion_tests.rs  placement_cli.rs  selection_cli.rs  shard_cli.rs
crates/rsmf-core/: Cargo.toml
crates/rsmf-core/examples/: compare_classification.rs  generate_model.rs  sharded_test.rs  test_extraction.rs
crates/rsmf-core/src/: adapter.rs  async_reader.rs  bit_shuffle.rs  checksum.rs  error.rs  gguf_convert.rs  lazy_reader.rs  lib.rs  manifest.rs  moe.rs  npy_convert.rs  placement.rs  preamble.rs  prefetch.rs  reader.rs  safetensors_convert.rs  section.rs  selection.rs  shard.rs  state_dict.rs  streaming_writer.rs  tier.rs  validator.rs  writer.rs
crates/rsmf-core/src/tensor/: dequantize.rs  descriptor.rs  dtype.rs  mod.rs  variant.rs  view.rs
crates/rsmf-core/tests/: adapters.rs  cast_f16.rs  compression.rs  dedup.rs  fp8_e4m3.rs  fp8_e5m2.rs  gguf_metadata.rs  gguf_opaque.rs  graph_asset.rs  lazy_reader.rs  malformed.rs  malformed_proptest.rs  mmap_view.rs  moe.rs  multi_arena.rs  placement.rs  prefetch.rs  roundtrip.rs  safetensors_convert.rs  selection.rs  shard.rs  state_dict.rs  streaming_writer.rs  test_dequantize_golden.rs  validation.rs  variant_membership.rs  writer_metadata.rs
crates/rsmf-core/tests/common/: mod.rs
crates/rsmf-core/tests/golden/: golden_q2_k.f32  golden_q2_k.raw  golden_q4_k.f32  golden_q4_k.raw  golden_q5_0.f32  golden_q5_0.raw  golden_q5_k.f32  golden_q5_k.raw  golden_q6_k.f32  golden_q6_k.raw
crates/rsmf-cuda/: Cargo.toml
crates/rsmf-cuda/src/: device.rs  lib.rs  upload.rs
crates/rsmf-cuda/tests/: cuda_smoke.rs
crates/rsmf-metal/: Cargo.toml
crates/rsmf-metal/src/: device.rs  lib.rs  upload.rs
crates/rsmf-metal/tests/: metal_smoke.rs
crates/rsmf-moe-runtime/: Cargo.toml
crates/rsmf-moe-runtime/src/: lib.rs  routing.rs  runtime.rs  transfer.rs  wgpu_compute.rs
crates/rsmf-moe-runtime/tests/: moe_runtime.rs
crates/rsmf-python/: Cargo.toml  README.md  pyproject.toml
crates/rsmf-python/python/rsmf/: __init__.py  _rsmf.pyi  _types.py
crates/rsmf-python/src/: lib.rs
crates/rsmf-python/tests/: conftest.py  test_basic.py  test_edge_cases.py  test_from_onnx.py  test_from_torch.py  test_zero_copy.py
crates/rsmf-runtime/: Cargo.toml
crates/rsmf-runtime/examples/: extract_cpe.rs  test_minilm.rs  tiny_issue_classifier.rs  tiny_native_decoder.rs  tiny_onnx_add.rs
crates/rsmf-runtime/src/: allocator_stats.rs  engine.rs  error.rs  executor.rs  lib.rs  native_decoder.rs  network.rs  onnx.rs  session.rs  tensor.rs  tests.rs
crates/rsmf-runtime/src/native_decoder/: backends.rs  contract.rs  generation.rs  kv_cache.rs  ops.rs  options.rs  prefix_cache.rs  sampling.rs  scheduler.rs  tokenizer.rs  weights.rs
crates/rsmf-runtime/src/native_decoder/tokenizer/: chat_template.rs  decoder.rs  encoding.rs  json.rs  normalizer.rs  post_processor.rs  pre_tokenizer.rs  sentencepiece_model.rs
crates/rsmf-runtime/src/tests/: executor.rs  native_decoder.rs  network.rs  onnx.rs
crates/rsmf-runtime/tests/fixtures/: tiny_hf_native_decoder_reference.json
crates/rsmf-wgpu/: Cargo.toml
crates/rsmf-wgpu/src/: compute.rs  device.rs  lib.rs  upload.rs
crates/rsmf-wgpu/tests/: wgpu_smoke.rs
docs/: ARCHITECTURE.md  ASSUMPTIONS.md  BENCHMARKS.md  CONVENTIONS.md  FORMAT_DECISIONS.md  MOE_RUNTIME.md  SPEC.md
