[package]
name = "rsmf-cuda"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CUDA upload path for RSMF — direct zero-copy GPU materialization."

[dependencies]
rsmf-core.workspace = true
cudarc.workspace = true
anyhow.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
