[package]
name = "rsmf-metal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Metal upload path for RSMF — direct zero-copy GPU materialization."

[dependencies]
rsmf-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
bytemuck.workspace = true

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
metal.workspace = true
objc.workspace = true
