[package]
name = "rsmf-moe-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Experimental MoE expert-parallel proof-of-concept runtime for RSMF."
publish = false

[dependencies]
rsmf-core.workspace = true
thiserror.workspace = true

[dependencies.rsmf-wgpu]
workspace = true
optional = true

[features]
default = []
# Probe WGPU availability for the expert-parallel PoC. The default runtime
# remains CPU-only so CI can run without an adapter.
wgpu = ["dep:rsmf-wgpu"]

[dev-dependencies]
tempfile.workspace = true
