[package]
name = "rsmf-moe-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Placement-aware MoE expert-parallel runtime for RSMF."
publish = false

[dependencies]
rsmf-core.workspace = true
thiserror.workspace = true

[dependencies.rsmf-wgpu]
workspace = true
optional = true

[dependencies.wgpu]
workspace = true
optional = true

[dependencies.pollster]
workspace = true
optional = true

[features]
default = []
# Probe WGPU availability for expert-parallel execution. The default runtime
# remains CPU-only so CI can run without an adapter.
wgpu = ["dep:rsmf-wgpu", "dep:wgpu", "dep:pollster"]

[dev-dependencies]
tempfile.workspace = true
