[package]
name = "rsmf-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-level inference runtime for RSMF — wires mmap tensors into ONNX Runtime."

[dependencies]
rsmf-core = { path = "../rsmf-core", version = "0.1.0", features = ["compression"] }
ort.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ndarray = "0.17"
unicode-normalization.workspace = true
regex.workspace = true
minijinja.workspace = true
half.workspace = true
tracing = { workspace = true, optional = true }

[features]
default = ["tracing", "ort-api-23-allocator-stats"]
tracing = ["rsmf-core/tracing", "dep:tracing"]
# Enables the ORT C API allocator statistics probe used by session memory
# reports. The workspace's pinned `ort` default features already expose API 24;
# this feature keeps the runtime contract explicit if ORT defaults are changed.
ort-api-23-allocator-stats = ["ort/api-23"]
# macOS-only native decoder backend using Accelerate / vecLib BLAS for f32
# linear projections. Non-macOS builds compile the feature but fall back to the
# CPU reference backend.
apple-accelerate = []

[dev-dependencies]
tempfile.workspace = true
