[package]
name = "rsmf-wgpu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WGPU upload path for RSMF — portable GPU materialization of tensor variants."

[dependencies]
rsmf-core.workspace = true
wgpu.workspace = true
pollster.workspace = true
anyhow.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
